# servertech

./: .gitignore  README.md  apiSerialization.ts  apiTypes.ts
ai_server/: CMakeLists.txt  README.md
ai_server/docs/: to_do.md  传输格式.txt
ai_server/include/: https_proxy.hpp  tcp_proxy.hpp
ai_server/src/: https_proxy.cpp  main.cpp  tcp_proxy.cpp
ai_server/test/: client.py
client/: dump.rdb
client/__tests__/pages/: index.tsx
client/components/: EmailInput.tsx  Head.tsx  MessageInputBar.tsx  PasswordInput.tsx  RoomEntry.tsx  UsernameInput.tsx
client/lib/: apiSerialization.ts  apiTypes.bak.ts
client/pages/: chat.tsx  chat.tsx.bak  index.tsx  login.tsx
doc/: devolopment.md  rpc_build.md  开发日志.md
server/: CMakeLists.txt
server/include/: business_types.hpp
server/include/api/: api_types.hpp
server/include/log/: logger.h  logger_wrapper.h
server/include/rpc/: rpc_channel.h  rpc_client.h  signal.h
server/include/services/: cookie_auth_service.hpp  mysql_client.hpp  mysql_pool.hpp  pubsub_service.hpp  redis_client.hpp
server/include/util/: async_mutex.hpp  websocket.hpp
server/src/: http_session.cpp  listener.cpp  main.cpp  shared_state.cpp
server/src/api/: api_types.cpp  chat_websocket.cpp
server/src/log/: log_persister.cpp  log_stream.cpp  logger.cpp  logger_wrapper.cpp
server/src/rpc/: CMakeLists.txt  ai_server.pb.h  ai_server.proto  result_with_message.h  rpc_channel.cpp  rpc_client.cpp  rpc_client.h  rpc_closure.h  rpc_meta.pb.h  zookeeper_op.cpp
server/src/rpc/config/: config.cpp
server/src/services/: cookie_auth_service.cpp  mysql_client.cpp  mysql_pool.cpp  pubsub_service.cpp  redis_client.cpp  session_store.cpp  thread_poll.cpp
server/src/util/: websocket.cpp
server/tools/Log/: LogPersister.cpp  LogPersister.h  LogStream.cpp  LogStream.h  Logger.cpp  Logger.h  LoggerWrapper.cpp  LoggerWrapper.h  main  main.cpp  test2  test2.cpp
server/tools/rpc/: CMakeLists.txt  client.cpp  readme.md  rpc_demo.proto  server.cpp
server/tools/threadPoll/: thread_poll.hpp
test/boost_test/: CMakeLists.txt  boost_test.cpp
tools/HTTP_Proxy/client/: client  client.cpp  endian  endian.cpp
tools/HTTP_Proxy/include/: http_proxy.hpp  https_proxy.hpp
tools/HTTP_Proxy/src/: http_proxy.cpp  https_proxy.cpp  main.cpp
tools/HTTP_Proxy/test/: client.py  server.py
tools/rpc/: CMakeLists.txt  dump.rdb
tools/rpc/ai_server/: CMakeLists.txt  ai_server.proto  ai_server_impl.cpp  ai_server_impl.h  method_process.cpp  method_process.h  redis_pool.cpp  redis_pool.h  server.cpp
tools/rpc/http/: CMakeLists.txt  ai_server.pb.cc  ai_server.pb.h  ai_server.proto  ai_server_impl.cpp  ai_server_impl.h  client.cpp
tools/rpc/src/: CMakeLists.txt  result_with_message.h  rpc_channel.cpp  rpc_channel.h  rpc_client.cpp  rpc_client.h  rpc_closure.h  rpc_controller.h  rpc_meta.pb.cc  rpc_meta.proto  rpc_server.cpp  rpc_server.h  signal.hpp  zookeeper_op.cpp  zookeeper_op.h
tools/rpc/src/ai_server/: ai_server.pb.cc  ai_server.pb.h  ai_server_impl.cpp  ai_server_impl.h  client_bak.cpp  method_process.cpp  method_process.h  redis_client.cpp  redis_client.h  redis_pool.cpp  redis_pool.h
tools/rpc/src/ai_server/mongodb/: mongodb_client.cpp  mongodb_client.h
tools/rpc/src/config/: config.h
tools/rpc/src/config/test/: config_test.cfg  main  main.cpp
tools/rpc/src/log/: log_persister.cpp  log_persister.h  log_stream.cpp  log_stream.h  logger.cpp  logger.h  logger_wrapper.cpp  logger_wrapper.h
tools/rpc/src/until/: base64.cpp  base64.hpp  general.hpp
tools/rpc/test/: CMakeLists.txt  client.cpp  rpc_demo.pb.cc  rpc_demo.pb.h  server.cpp  zoo.cfg
tools/rpc/test/ai_server/: CMakeLists.txt  client.bak  client.cpp  redis_test.cpp  server.cpp  signal.cpp  test_function.cpp
tools/rpc/test/general/: CMakeLists.txt  boost_async_compose.cpp
tools/rpc/test/mongodb/: CMakeLists.txt  client.cpp  main.cpp  mongodb_client.cpp  mongodb_client.h  thread_poll.cpp
tools/rpc/test/rpc_test/: CMakeLists.txt  CMakeLists.txt_bak  client.cpp  server.cpp
